<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.OptionsFragment">

    <ImageView
        android:id="@+id/im_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/playing_football"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_options_title"
        style="@style/title_style"
        android:text="@string/options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_notification"
        style="@style/app_text_style_main"
        android:text="@string/notification"
        app:layout_constraintStart_toStartOf="@+id/tv_theme"
        app:layout_constraintTop_toBottomOf="@+id/tv_options_title" />

    <TextView
        android:id="@+id/tv_theme"
        style="@style/app_text_style_main"
        android:text="@string/change_theme"
        app:layout_constraintEnd_toStartOf="@+id/switch_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_notification" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:thumb="@drawable/switch_thumb"
        app:layout_constraintBottom_toBottomOf="@+id/tv_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_notification"
        app:track="@drawable/switch_track" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:thumb="@drawable/switch_thumb"
        app:layout_constraintBottom_toBottomOf="@+id/tv_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_theme"
        app:track="@drawable/switch_track" />

</androidx.constraintlayout.widget.ConstraintLayout>